@@ -106,8 +106,8 @@ devtool_autogen () {
         libtool )
             libtoolize_version=`devtool_require libtoolize --version 4 "$1" "$2"`
             echo "generating (GNU Libtool $libtoolize_version): ltmain.sh, libtool.m4, config.guess, config.sub"
-            libtoolize --force --copy >/dev/null 2>&1
-            cp `libtoolize --force --copy --dry-run | grep "add the contents of" |\
+            libtoolize --force --copy --install >/dev/null 2>&1
+            cp `libtoolize --force --copy --dry-run --install | grep "add the contents of" |\
                 sed -e 's;^[^\`]*\`;;' -e "s;'.*;;"` libtool.m4
             ;;
         shtool )
