@@ -211,7 +211,7 @@
         v_m4="1.4.9"
         v_autoconf="2.61"
         v_automake="1.10"
-        v_libtool="1.5.26"
+        v_libtool="2.2"
         v_gettext="0.17"
 
         #   third-party library distribution versions
